Allow subscribing and unsubscribing by CSV  (#32)
* API + controller changes

* Update vehicle_subscription_controller.go

* Update vehicle_subscription_controller.go

* Update vehicle_subscription_controller.go

* Swagger
